--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tailwindcss": "^1.1.4",
         "vue-apexcharts": "^1.5.1",
         "vue-chartjs": "^3.5.0",
+        "vue-clipboard2": "^0.3.3",
         "vue-spinner": "^1.0.3",
         "vue-sweetalert2": "^2.1.5"
     }
