--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,11 @@ MIX_APP_URL="${APP_URL}"
 
 HASHIDS_SALT=
 HASHIDS_MIN_LENGTH=7
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_RETURN_URL=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_CLIENT_RETURN_URL=
