--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "^8.0",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^3.0",
+        "stevebauman/location": "^6.5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
