design and image lodaing changes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,5 +14,5 @@
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
     "display": "standalone",
-    "start_url": "hpvk.com"
+    "start_url": "https://hpvk.com"
 }
